# fonbet-odds-mcp

./: .env.example  .gitignore  README.md  pyproject.toml  render.yaml
src/fonbet_mcp/: __init__.py  config.py  fonbet.py  server.py
