[project]
name = "fonbet-mcp"
version = "0.1.0"
description = "MCP server for reading Fonbet sports events and odds."
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27.0",
    "mcp[cli]>=1.2.0",
    "pydantic>=2.7.0",
    "python-dotenv>=1.0.1",
]

[project.scripts]
fonbet-mcp = "fonbet_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/fonbet_mcp"]
